[package]
name = "caemu-components"
version = "0.1.0"
authors = ["Jean-Baptiste Wons <wonsjb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caemu = { path = "../caemu" }
caemu-macro = { path = "../caemu-macro" }
